## Process this file with automake to produce Makefile.in.

HTML_FILES =			\
	grisbi-manuel.html \
	quickstart.html \
	translation.html

grisbi_helpdir = $(docdir)/en

grisbi_help_DATA = \
	topic.dat     \
	contents_motif.gif \
	next_motif.gif \
	previous_motif.gif \
	$(HTML_FILES)

EXTRA_DIST =  $(grisbi_help_DATA)
