## Process this file with automake to produce Makefile.in.

HTML_FILES =			\
	grisbi-manuel.html \
	quickstart.html \
	translation.html

grisbi_helpdir = $(datadir)/gnome/help/grisbi/fr

grisbi_help_DATA = \
	topic.dat     \
	contents_motif.gif \
	next_motif.gif \
	previous_motif.gif \
	$(HTML_FILES)

EXTRA_DIST = 		\
	contents_motif.gif		\
	previous_motif.gif	\
	next_motif.gif	\
	topic.dat
