## Process this file with automake to produce Makefile.in.

SUBDIRS = image

HTML_FILES =			\
	grisbi-manuel.html \
	grisbi-manuel001.html \
	grisbi-manuel002.html \
	grisbi-manuel003.html \
	grisbi-manuel004.html \
	grisbi-manuel005.html \
	grisbi-manuel006.html \
	grisbi-manuel007.html \
	grisbi-manuel008.html \
	grisbi-manuel009.html \
	grisbi-manuel010.html \
	grisbi-manuel011.html \
	grisbi-manuel012.html \
	grisbi-manuel013.html \
	grisbi-manuel014.html \
	grisbi-manuel015.html \
	grisbi-manuel016.html \
	grisbi-manuel017.html \
	grisbi-manuel018.html \
	grisbi-manuel019.html \
	grisbi-manuel020.html \
	grisbi-manuel021.html \
	grisbi-manuel022.html \
	grisbi-manuel023.html \
	grisbi-manuel024.html \
	grisbi-manuel025.html \
	index.html \
	quickstart.html \
	translation.html

grisbi_helpdir = $(docdir)/fr

grisbi_help_DATA = \
	grisbi-manuel.css \
	grisbi-manuel.pdf \
	topic.dat     \
	contents_motif.gif \
	next_motif.gif \
	previous_motif.gif \
	$(HTML_FILES)

EXTRA_DIST =  $(grisbi_help_DATA)
