grisbi_pixmaps_flagsdir = $(datadir)/pixmaps/$(PACKAGE)/flags

grisbi_pixmaps_flags_DATA = ADP.png AED.png AFN.png ALL.png AMD.png	\
ANG.png ARS.png ATS.png AUD.png AWG.png AZM.png BAM.png BBD.png		\
BDT.png BEF.png BGN.png BHD.png BHU.png BIF.png BMD.png BND.png		\
BOB.png BRL.png BSD.png BTN.png BWP.png BYB.png BZD.png CAD.png		\
CAM.png CDF.png CHA.png CHF.png CLP.png CNY.png CO_.png COO.png		\
COP.png CRC.png CUP.png CVE.png CYP.png CZK.png DEM.png DJF.png		\
DKK.png DOP.png DZD.png ECS.png EEK.png EGP.png ERN.png ESP.png		\
ETB.png EUR.png FIM.png FJD.png FKP.png FRF.png GBP.png GEL.png		\
GHC.png GIP.png GMD.png GNF.png GRD.png GRE.png GTQ.png GWP.png		\
GYD.png HKD.png HNL.png HRK.png HTG.png HUF.png IDR.png IEP.png		\
ILS.png INR.png IQD.png IRR.png ISK.png ITL.png JMD.png JOD.png		\
JPY.png KES.png KGS.png KHR.png KIR.png KMF.png KPW.png KRW.png		\
KWD.png KYD.png KZT.png LAK.png LBP.png LIE.png LKR.png LRD.png		\
LSL.png LTL.png LUF.png LVL.png LYD.png MAD.png MDL.png MGF.png		\
MKD.png MMK.png MNT.png MOP.png MRO.png MTL.png MUR.png MVR.png		\
MWK.png MXP.png MYR.png MZM.png NAD.png NAU.png NGN.png NIG.png		\
NIO.png NLG.png NOK.png NPR.png NZD.png OMR.png PAB.png PEN.png		\
PGK.png PHP.png PKR.png PLN.png PTE.png PYG.png QAR.png ROL.png		\
RUR.png RWF.png SAN.png SAR.png SBD.png SCR.png SDD.png SEK.png		\
SEN.png SGD.png SHP.png SIT.png SKK.png SLC.png SLL.png SOS.png		\
SRD.png STD.png SVC.png SYP.png SZL.png THB.png TJS.png TMM.png		\
TND.png TOP.png TPE.png TRL.png TTD.png TUV.png TWD.png TZS.png		\
UAH.png UGX.png USD.png UYU.png UZS.png VAT.png VEB.png VND.png		\
VUV.png WST.png XPF.png YER.png YUM.png YUV.png ZAR.png ZMK.png		\
ZWD.png

EXTRA_DIST = $(grisbi_pixmaps_flags_DATA) 
