uidir = $(pkgdatadir)/ui

ui_DATA = bet_graph.ui \
		csv_template_rule.ui	\
		etats_prefs.ui \
 		grisbi.css	\
		grisbi_menu.ui \
    grisbi_prefs.ui \
		grisbi_win.ui \
    prefs_page_accueil.ui \
    prefs_page_archives.ui \
    prefs_page_display_adr.ui \
    prefs_page_display_fonts.ui \
    prefs_page_display_gui.ui \
    prefs_page_divers.ui \
    prefs_page_files.ui \
    prefs_page_import_asso.ui \
    prefs_page_import_files.ui

EXTRA_DIST = $(ui_DATA)
