uidir = $(pkgdatadir)/ui

ui_DATA = grisbi.css \
 		grisbi-dark.css \
 		grisbi-widgets.css \
		bet_graph.ui \
		csv_template_rule.ui \
		etats_prefs.ui \
		grisbi_menu.ui \
		grisbi_prefs.ui \
		grisbi_win.ui \
		prefs_page_bet_general.ui \
		prefs_page_currency.ui \
		prefs_page_currency_link.ui \
		prefs_page_display_adr.ui \
		prefs_page_display_fonts.ui \
		prefs_page_display_form.ui \
		prefs_page_display_gui.ui \
		prefs_page_display_ope.ui \
		prefs_page_divers.ui \
		prefs_page_files.ui \
		prefs_page_form_completion.ui \
		prefs_page_form_options.ui \
		prefs_page_fyear.ui \
		prefs_page_import.ui \
		prefs_page_metatree.ui \
		prefs_page_msg_delete.ui \
		prefs_page_msg_warning.ui \
		prefs_page_options_ope.ui \
		prefs_page_payment_method.ui \
		prefs_page_reconcile.ui \
		prefs_page_reconcile_sort.ui \
		search_transaction.ui

EXTRA_DIST = $(ui_DATA)
