uidir = $(pkgdatadir)/ui

ui_DATA = grisbi.css \
 		grisbi-dark.css \
 		grisbi-widgets.css \
		bet_graph.ui \
		csv_template_rule.ui \
		etats_prefs.ui \
		grisbi_menu.ui \
		grisbi_prefs.ui \
		grisbi_win.ui \
		prefs_page_import.ui \
		prefs_page_metatree.ui \
		prefs_page_msg_delete.ui \
		prefs_page_msg_warning.ui \
		prefs_page_options_ope.ui \
		prefs_page_payment_method.ui \
		prefs_page_reconcile.ui \
		prefs_page_reconcile_sort.ui \
		search_transaction.ui

EXTRA_DIST = $(ui_DATA)
